tests/sources/invalid/classes/class_new_constructor_errors.fire
// Invalid uses of the 'new ClassName(args)' constructor syntax.
import @firescript/std.io.println;

class Box {
    v: int32;

    fn Box(v: int32) {
        this.v = v;
    }
}

// Wrong argument count
b: Box = new Box(5i32, 6i32);  //~ ERROR FS-SEM-0010 @14

// Wrong argument type
c: Box = new Box("x");  //~ ERROR FS-SEM-0010 @18

// Unknown type
d: Nope = new Nope(1i32);  //~ ERROR FS-PARSE-0012 @15
//~^ ERROR FS-SEM-0010 @15
